--- a/Student/tudents_list.yaml
+++ b/Student/tudents_list.yaml
@@ -1,18 +1,19 @@
-- id: 1
-  surname: Blyagoz
-  name: Amal
-  second_name: Khazretovich
-  birthdate: 2004-06-14
-  phone: 
-  telegram: "@lamafout"
-  email: lamafout@yandex.ru
-  git: github.com/lamafout
-- id: 
-  surname: Lotarev
-  name: Sergey
-  second_name: Urievuch
-  birthdate: 2004-10-26
-  phone: '88005553535'
-  telegram: 
-  email: 
-  git: 
+---
+- :id: '14'
+  :surname: Логвина
+  :name: Аня
+  :patronymic: Владимировна
+  :birthdate: 12/03/2012
+  :telegram:
+  :email: example@mail.com
+  :number_phone: '89182188064'
+  :git: sdfghjk
+- :id: '15'
+  :surname: Кравцова
+  :name: Даша
+  :patronymic: Александровна
+  :birthdate: 12/03/2004
+  :telegram: nastia
+  :email: example@mail.com
+  :number_phone: '89182188064'
+  :git: tamatm
