4 laba 3.1 number | creaеting a  connection to the db

--- a/Student/tudents_list.yaml
+++ b/Student/tudents_list.yaml
@@ -53,3 +53,30 @@
   :email: example@mail.com
   :number_phone: '89182188064'
   :git: sdfghjk
+- :id: '14'
+  :surname: Логвина
+  :name: Аня
+  :patronymic: Владимировна
+  :birthdate: 12/03/2012
+  :telegram:
+  :email: example@mail.com
+  :number_phone: '89182188064'
+  :git: sdfghjk
+- :id: '14'
+  :surname: Логвина
+  :name: Аня
+  :patronymic: Владимировна
+  :birthdate: 12/03/2012
+  :telegram:
+  :email: example@mail.com
+  :number_phone: '89182188064'
+  :git: sdfghjk
+- :id: '14'
+  :surname: Логвина
+  :name: Аня
+  :patronymic: Владимировна
+  :birthdate: 12/03/2012
+  :telegram:
+  :email: example@mail.com
+  :number_phone: '89182188064'
+  :git: sdfghjk
